# Model

./: .gitignore  README.md  custom_cloud.py  custom_trainer.py  dataset_inspect.py  grpo_cloud.py  grpo_trainer.py  infer-sft.py  main.py  modal_cloud.py  pyproject.toml  requirements.txt  seg_infer-sft.py  sft_cloud.py  sft_trainer.py  textualUI.py
configs/: __init__.py  configs.py  models.yaml  paths.yaml
inference/: Loader.py  infer-sft.py  inference_engine.py  seg_infer-sft.py
script/: CustomModel.py  CustomTrainerForMask.py  DatasetLoader.py  DatatemplateEditor.py  FolderManager.py  HuggingfaceDownload.py  HuggingfaceTrainer.py  ModelLoader.py  TemplateTokenize.py  UnslothTrainer.py  WandbLogger.py
script/cloud/: modal_setup.py
script/custom/: CustomModel.py  reward.py
script/helper/: Collator.py  FolderManager.py  MaskDecoder.py  data_solver.py  model_solver.py  special_tokens.py  trainer_solver.py
templates/: my_template.jinja
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  BlockDiagonalLinear_peft_forward.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  TeLinear_peft_forward.py  UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  unsloth_compiled_module_qwen3.py  unsloth_compiled_module_qwen3_vl.py  unsloth_compiled_module_siglip.py
