[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "hydra-core>=1.3.2",
    "python-slugify>=8.0.4",
    "textual[syntax]>=8.2.7",
    "textual-dev>=1.8.0",
    "transformers<5",
    "unsloth",
    "unsloth-zoo",
    "wandb>=0.27.0",
    "pathvalidate>=3.3.1",
]

